--- a/index.html
+++ b/index.html
@@ -30,38 +30,18 @@
             color: #007BFF;
             text-decoration: none;
         }
-        .services {
-            margin-top: 30px;
-        }
-        .services ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .services li {
-            background-color: #e9ecef;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Timothy Motors</h1>
+        <h1>Welcome to Timothy Motors</h1>
         <p>Your trusted destination for high-quality, secondhand vehicles.</p>
+        <p>Timothy Motors - Quality, Trust, and Value in Every Mile.</p>
         <div class="contact-info">
-            <p><strong>Address:</strong> Tochigi, Japan</p>
-            <p><strong>Contact Number:</strong> +81-123-456-7890</p>
-            <p><strong>Facebook:</strong> <a href="https://www.facebook.com/TimothyMotors" target="_blank">Timothy Motors on Facebook</a></p>
-        </div>
-        <div class="services">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Pre-owned Car Sales</li>
-                <li>Vehicle Trade-ins</li>
-                <li>Financing Options</li>
-                <li>Vehicle Inspections</li>
-            </ul>
+            <p><strong>Address:</strong> Tochigi-Ken, Tochigi-Shi Sakaimachi 4-6</p>
+            <p><strong>Email:</strong> <a href="mailto:allservices0504@gmail.com">allservices0504@gmail.com</a></p>
+            <p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61568403037581" target="_blank">Timothy Motors on Facebook</a></p>
+            <p><strong>Contact Number:</strong> 0282513390</p>
         </div>
     </div>
 </body>
