--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
         <div class="section">
             <h2>Location</h2>
-            <p>〒328-0043 栃木県栃木市境町4-6</p>
+            <p><a href="https://www.google.com/maps/place/%E6%A0%83%E6%9C%A8%E7%9C%8C%E6%A0%83%E6%9C%A8%E5%B8%82%E5%A2%83%E7%94%BA%EF%BC%94%E2%88%92%EF%BC%96/@36.377622,139.733437,17z" target="_blank">〒328-0043 栃木県栃木市境町4-6</a></p>
         </div>
         
         <div class="section contact-info">
