--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f8ff; /* Light blue background */
+            background: linear-gradient(to right, #f0f8ff, #e0ffff); /* Gradient background */
             color: #333;
         }
         .container {
