--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timothy Motors</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #f0f8ff, #e0ffff); /* Gradient background */
+            background: linear-gradient(to right, #f0f8ff, #e0ffff);
             color: #333;
         }
         .container {
@@ -18,26 +19,26 @@
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px; /* Rounded corners */
-            border: 1px solid #ccc; /* Light gray border */
+            border-radius: 10px;
+            border: 1px solid #ccc;
             text-align: center;
         }
         h1 {
-            color: #007BFF; /* Blue color */
+            color: #007BFF;
             margin-bottom: 20px;
         }
         .section {
             margin: 20px 0;
         }
         .section h2 {
-            color: #0056b3; /* Darker blue */
+            color: #0056b3;
             margin-bottom: 10px;
         }
         .contact-info p {
             margin: 10px 0;
         }
         a {
-            color: #007BFF; /* Blue links */
+            color: #007BFF;
             text-decoration: none;
         }
         a:hover {
@@ -45,13 +46,13 @@
         }
         .highlight {
             font-weight: bold;
-            color: #007BFF; /* Blue */
+            color: #007BFF;
         }
         .cta-button {
             display: inline-block;
             padding: 10px 20px;
             margin: 20px 0;
-            background-color: #007BFF; /* Blue button */
+            background-color: #007BFF;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -59,7 +60,7 @@
             font-size: 16px;
         }
         .cta-button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background-color: #0056b3;
         }
         footer {
             margin-top: 30px;
@@ -69,6 +70,30 @@
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Timothy Motors</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>Welcome to Timothy Motors</h1>
         
@@ -90,15 +115,34 @@
             <h2>Contact</h2>
             <p><strong>Email:</strong> <a href="mailto:nimasherpa0929@gmail.com">nimasherpa0929@gmail.com</a></p>
             <p><strong>WhatsApp:</strong> <a href="https://wa.me/818094464332" target="_blank">+81 809-4464-332</a></p>
-            <p><strong>Phone:</strong> +81 0282-51-3390</p>
+            <p><strong>Phone:</strong> <a href="tel:+81282513390">+81 0282-51-3390</a></p>
             <p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61568403037581" target="_blank">Timothy Motors on Facebook</a></p>
         </div>
         
         <a href="#" class="cta-button">Contact Us</a>
     </div>
 
-    <footer>
-        © 2024 Timothy Motors. All rights reserved.
+    <footer class="bg-light text-center text-lg-start mt-5">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Timothy Motors</h5>
+                    <p>Providing quality automotive services since 2000.</p>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Contact</h5>
+                    <p>Email: info@timothymotors.com</p>
+                    <p>Phone: +1 234 567 890</p>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2024 Timothy Motors
+        </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
