--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Timothy Motors</h5>
-                    <p>Providing quality automotive services since 2000.</p>
+                    <p>Providing quality automotive services since 2022.</p>
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Contact</h5>
-                    <p>Email: info@timothymotors.com</p>
-                    <p>Phone: +1 234 567 890</p>
+                    <p>Email: <a href="mailto:nimasherpa0929@gmail.com">nimasherpa0929@gmail.com</a></p>
+                    <p>Phone: <a href="tel:+81282513390">+81 0282-51-3390</a></p>
                 </div>
             </div>
         </div>
