--- a/index.html
+++ b/index.html
@@ -6,66 +6,116 @@
     <title>Timothy Motors</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
+        /* Base styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #f0f8ff, #e0ffff);
+            box-sizing: border-box;
+            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient background */
             color: #333;
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            border: 1px solid #ccc;
+
+        /* Header styles */
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 15px 0;
             text-align: center;
         }
-        h1 {
-            color: #007BFF;
+
+        /* Navbar styles */
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            margin: 0;
+        }
+
+        nav ul li {
+            margin: 0 10px;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+
+        nav ul li a:hover {
+            background-color: #555;
+        }
+
+        /* Main content styles */
+        main {
+            padding: 20px;
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px; /* Rounded corners */
+            border: 1px solid #ccc; /* Light gray border */
+        }
+
+        /* Section styles */
+        section {
             margin-bottom: 20px;
         }
-        .section {
-            margin: 20px 0;
-        }
-        .section h2 {
-            color: #0056b3;
+
+        section h2 {
+            color: #0056b3; /* Darker blue */
             margin-bottom: 10px;
         }
+
+        /* Contact info styles */
         .contact-info p {
             margin: 10px 0;
         }
+
+        /* Link styles */
         a {
-            color: #007BFF;
+            color: #007BFF; /* Blue links */
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
+        /* Highlight styles */
         .highlight {
             font-weight: bold;
-            color: #007BFF;
+            color: #007BFF; /* Blue */
         }
+
+        /* Call-to-action button styles */
         .cta-button {
             display: inline-block;
             padding: 10px 20px;
             margin: 20px 0;
-            background-color: #007BFF;
+            background-color: #007BFF; /* Blue button */
             color: #fff;
             border: none;
             border-radius: 5px;
             text-decoration: none;
             font-size: 16px;
         }
+
         .cta-button:hover {
-            background-color: #0056b3;
+            background-color: #0056b3; /* Darker blue on hover */
         }
+
+        /* Footer styles */
         footer {
-            margin-top: 30px;
-            color: #777;
-            font-size: 14px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
     </style>
 </head>
@@ -93,6 +143,34 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="your-image-1.jpg" class="d-block w-100" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img src="your-image-2.jpg" class="d-block w-100" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img src="your-image-3.jpg" class="d-block w-100" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
     <div class="container">
         <h1>Welcome to Timothy Motors</h1>
