--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         /* Base styles */
-        body {
-            font-family: Arial, sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: Arial, sans-serif;
             background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient background */
             color: #333;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Container styles */
+        .container {
+            flex: 1;
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px; /* Rounded corners */
+            border: 1px solid #ccc; /* Light gray border */
+            text-align: center;
         }
 
         /* Header styles */
@@ -25,46 +44,24 @@
         }
 
         /* Navbar styles */
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            margin: 0;
+        .navbar {
+            background-color: #333;
         }
 
-        nav ul li {
-            margin: 0 10px;
-        }
-
-        nav ul li a {
+        .navbar-brand, .navbar-nav .nav-link {
             color: #fff;
-            text-decoration: none;
-            padding: 5px 10px;
-            border-radius: 5px;
         }
 
-        nav ul li a:hover {
-            background-color: #555;
-        }
-
-        /* Main content styles */
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: 50px auto;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px; /* Rounded corners */
-            border: 1px solid #ccc; /* Light gray border */
+        .navbar-nav .nav-link:hover {
+            color: #dcdcdc; /* Light grey on hover */
         }
 
         /* Section styles */
-        section {
+        .section {
             margin-bottom: 20px;
         }
 
-        section h2 {
+        .section h2 {
             color: #0056b3; /* Darker blue */
             margin-bottom: 10px;
         }
@@ -113,15 +110,29 @@
             color: #fff;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
             width: 100%;
-            bottom: 0;
+        }
+
+        /* Carousel styles */
+        .carousel-inner img {
+            width: 100%;
+            height: 400px;
+            object-fit: cover; /* Ensure images cover the carousel */
+        }
+
+        .carousel-indicators .active {
+            background-color: #007BFF; /* Blue active indicator */
+        }
+
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            filter: invert(100%); /* White icons */
         }
     </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">Timothy Motors</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
