--- a/index.html
+++ b/index.html
@@ -7,28 +7,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         /* Base styles */
-        html, body {
-            height: 100%;
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient background */
             color: #333;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
+            background-color: #f8f9fa; /* Light grey background for body */
         }
 
         /* Container styles */
         .container {
-            flex: 1;
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #fff;
+            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient background for the container */
+            color: #333;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px; /* Rounded corners */
             border: 1px solid #ccc; /* Light gray border */
@@ -132,7 +126,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Timothy Motors</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
