--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            color: #333;
             background-color: #f8f9fa; /* Light grey background for body */
+            color: #333;
         }
 
         /* Container styles */
-        .container {
+        .content-container {
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
             background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient background for the container */
-            color: #333;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px; /* Rounded corners */
             border: 1px solid #ccc; /* Light gray border */
@@ -43,11 +42,11 @@
         }
 
         .navbar-brand, .navbar-nav .nav-link {
-            color: #fff;
+            color: #fff !important;
         }
 
         .navbar-nav .nav-link:hover {
-            color: #dcdcdc; /* Light grey on hover */
+            color: #dcdcdc !important; /* Light grey on hover */
         }
 
         /* Section styles */
@@ -105,6 +104,8 @@
             text-align: center;
             padding: 10px 0;
             width: 100%;
+            position: relative;
+            bottom: 0;
         }
 
         /* Carousel styles */
@@ -126,7 +127,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">Timothy Motors</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -177,7 +178,7 @@
         </a>
     </div>
 
-    <div class="container">
+    <div class="content-container">
         <h1>Welcome to Timothy Motors</h1>
         
         <div class="section">
