--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         /* Navbar styles */
         .navbar {
             background-color: #333;
+            z-index: 1000; /* Ensure the navbar is above other content */
+            position: sticky;
+            top: 0; /* Stick the navbar to the top */
+            width: 100%;
         }
 
         .navbar-brand, .navbar-nav .nav-link {
